removal of after pseudo classes that caused inconsistent image overlays based on changing viewport height on mobile phones with full screens - could not be bothered to do the js fix atm - willmaybe address later - for now using paralax effect which is nicely matched to theme colors. - minor structural changes - removal of about me header large

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -8,27 +8,27 @@ $background-opacity: 0.95;
 	transition: all 0.5s ease-out;
 }
 
-@mixin background {
-	@if $show-home-image {
-		&#bg-img {
-			background: $home-image;
-			background-attachment: local;
-			background-size: auto;
-			background-repeat: no-repeat;
+// @mixin background {
+// 	@if $show-home-image {
+// 		&#bg-img {
+// 			background: $home-image;
+// 			background-attachment: local;
+// 			background-size: auto;
+// 			background-repeat: no-repeat;
 
-			&:after {
-				content: '';
-				position: fixed;
-				top: 0;
-				right: 0;
-				width: 100%;
-				height: 100%;
-				z-index: -1;
-				background: rgba($primary-color, $background-opacity);
-			}
-		}
-	}
-}
+// 			&:after {
+// 				content: '';
+// 				position: fixed;
+// 				top: 0;
+// 				right: 0;
+// 				width: 100%;
+// 				height: 100%;
+// 				z-index: -1;
+// 				background: rgba($primary-color, $background-opacity);
+// 			}
+// 		}
+// 	}
+// }
 
 // Set Text Color
 @function set-text-color($color) {
